Make CSV importer support ISO formatted date

Try parsing using ISO formatting first and only continue with
heurestics if unsuccessful.

BUG: 435488
FIXED-IN: 5.1.2